[package]
name = "include_js_core"
author = "Liss Heidrich"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides &str and String wrappers that ensure they contain syntactically valid Javascript"
repository = "https://github.com/Clueliss/include_js"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Boa = "0.11.0"
